--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Terror-Out-of-Space_66539
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66539-h/images/cover.jpg
 creator:
   author:
     agent_name: Swain, Dwight V.
@@ -11,6 +14,8 @@ creator:
     - https://en.wikipedia.org/wiki/Dwight_V._Swain
     - http://www.gutenberg.org/ebooks/author/35980
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66539#The-Terror-Out-of-Space
 gutenberg_issued: '2021-10-14'
 identifiers:
   gutenberg: '66539'
